--- a/.github/workflows/issue-reply.yml
+++ b/.github/workflows/issue-reply.yml
@@ -1,3 +1,4 @@
+# issue 自动回复
 name: Issue reply
 
 on:
@@ -21,7 +22,7 @@ jobs:
             你好 @${{ github.event.issue.user.login }}，我们完全同意你的提议/反馈，欢迎直接在此仓库创建一个 Pull Request 来解决这个问题。请将 Pull Request 发到正确的分支（新特性发到 feature 分支，其他发到 master 分支），务必填写 Pull Request 内的预设模板，提供改动所需相应的 changelog、TypeScript 定义、测试用例、文档等，并确保 CI 通过，我们会尽快进行 Review，提前感谢和期待您的贡献。
 
       - name: need repo
-        if: github.event.label.name == '🤔 Need Reproduce'
+        if: github.event.label.name == 'Need Reproduce'
         uses: actions-cool/issues-helper@v1.7
         with:
           actions: 'create-comment'
