--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Create new issue
-    url: http://new-issue.ant.design
-    about: The issue which is not created via http://new-issue.ant.design will be closed immediately.
+    url: https://github.com/2321605193/2321605193.github.io
+    about: The issue which is not created via https://github.com/2321605193/2321605193.github.io will be closed immediately.
