--- a/.github/workflows/issue-check-invalid.yml
+++ b/.github/workflows/issue-check-invalid.yml
@@ -1,3 +1,4 @@
+# 检查不符合要求的issue，评论，添加Invalid标签，关闭该issue
 name: Issue Check Invalid
 
 on:
@@ -7,7 +8,7 @@ on:
 jobs:
   check-issue:
     runs-on: ubuntu-latest
-    if: contains(github.event.issue.body, 'ant-design-issue-helper') == false
+    if: contains(github.event.issue.body, 'issue-helper') == false
     steps:
       - name: test
         uses: actions-cool/issues-helper@v1.7
@@ -17,6 +18,6 @@ jobs:
           issue-number: ${{ github.event.issue.number }}
           labels: 'Invalid'
           body: |
-            Hello @${{ github.event.issue.user.login }}, your issue has been closed because it does not conform to our issue requirements. Please use the [Issue Helper](http://new-issue.ant.design) to create an issue, thank you!
+            Hello @${{ github.event.issue.user.login }}, your issue has been closed because it does not conform to our issue requirements. Please use the [Issue Helper](https://github.com/2321605193/2321605193.github.io) to create an issue, thank you!
 
-            你好 @${{ github.event.issue.user.login }}，为了能够进行高效沟通，我们对 issue 有一定的格式要求，你的 issue 因为不符合要求而被自动关闭。你可以通过 [issue 助手](http://new-issue.ant.design) 来创建 issue 以方便我们定位错误。谢谢配合！
+            你好 @${{ github.event.issue.user.login }}，为了能够进行高效沟通，我们对 issue 有一定的格式要求，你的 issue 因为不符合要求而被自动关闭。你可以通过 [issue 助手](https://github.com/2321605193/2321605193.github.io) 来创建 issue 以方便我们定位错误。谢谢配合！
